force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/MPM4_BASE__Milestone1_Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>