force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Breakeven_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Breakeven_Hourly_Rate__c</fullName>
    <label>Breakeven Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>