force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Contact__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>