force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Resource_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Skill_Set__c</fullName>
    <label>Skill Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPM4_BASE__Resource_Skills</valueSetName>
    </valueSet>
</CustomField>