force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Resource_Skills__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Skills__c</fullName>
    <label>Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>