force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__User__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>